# HydroAgent

./: .gitignore  Dockerfile.train  README.md  control.txt  pyproject.toml
configs/: sft_config.yaml  train_config.yaml
configs/gages/: 01403060.yaml  02294781.yaml  02312000.yaml  02338660.yaml  06279500.yaml  07144100.yaml  07195430.yaml  11043000.yaml  11152000.yaml  11179000.yaml  11376000.yaml  11383500.yaml  14207500.yaml  14301000.yaml
configs/models/: qwen2.5_32b.yaml  qwen2.5_72b.yaml  qwen2.5_7b.yaml  qwen3_4b_sft.yaml  qwen3_8b.yaml  qwen3_8b_rl.yaml  qwen3_8b_sft.yaml
configs/verl/: qwen3_4b_grpo.yaml  tool_config.yaml
docs/: index.html
modal_app/: __init__.py  baseline.py  eval.py  eval_sglang.py  images.py  sft.py  train.py
scripts/: apply_audit.py  audit_flood_windows.py  build_data_tarball.py  build_verl_dataset.py  calc_nse.py  prepare_sft_data.py  push_model.py  run_baseline.sh  test_env_local.py
src/hydrollm/: __init__.py  baseline.py  config.py  dataset.py  environment.py  prompts.py  reward.py  sft_dataset.py  tools.py  verl_reward.py  verl_tools.py
tests/: test_environment.py  test_reward.py  test_tools.py
