[project]
name = "hydrollm"
version = "0.1.0"
description = "RL fine-tuning of LLMs with hydrologic simulation feedback (GRPO + EF5/CREST)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "HydroLLM Team"}]

dependencies = [
    "torch>=2.4",
    "trl>=1.0",
    "transformers>=4.45",
    "vllm>=0.6",
    "accelerate",
    "peft",
    "datasets",
    "unsloth",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "pyyaml",
    "wandb",
    "jmespath",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
modal = [
    "modal",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
